--- a/application.yml
+++ b/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: config-service
+    name: greeting-service
 greeting-service:
   config: "Hello"
   default-value: "World"
