--- a/config-server/application-perf.yml
+++ b/config-server/application-perf.yml
@@ -1,7 +1,7 @@
 spring:
   application:
-    name: config-service
-config-service:
+    name: greeting-service
+greeting-service:
   greeting: "Hola"
   default-value: "Mundo"
 management:
