--- a/config-server/application-qa.yml
+++ b/config-server/application-qa.yml
@@ -1,7 +1,7 @@
 spring:
   application:
-    name: config-server
-config-server:
+    name: greeting-service
+greeting-service:
   greeting: "Ola"
   default-value: "Mundo"
 management:
